<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/IDD"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/TEXTO1"
                android:inputType="textPersonName"
                tools:ignore="VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/NOMBREE"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/TEXTO2"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                tools:ignore="VisualLintTextFieldSize,DuplicateSpeakableTextCheck" />

            <EditText
                android:id="@+id/MATRICULAA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/TEXTO2"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                tools:ignore="VisualLintTextFieldSize,DuplicateSpeakableTextCheck" />

            <EditText
                android:id="@+id/APELLIDOO"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/TEXTO2"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                tools:ignore="VisualLintTextFieldSize" />

            <Button
                android:id="@+id/boton1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="Buscar"
                android:text="@string/BOTON1"
                tools:ignore="VisualLintButtonSize" />

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="Guardar"
                android:text="@string/BOTON2"
                tools:ignore="VisualLintButtonSize" />

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="Modificiar"
                android:text="@string/BOTON3"
                tools:ignore="VisualLintButtonSize" />

            <Button
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/BOTON4"
                tools:ignore="VisualLintButtonSize" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>